# libjpeg_for_android

./: CMakeLists.txt  README.md  build.sh  main.cpp
